# OpenGLeckMich

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
OpenGLeckMich/: CMakeLists.txt  OpenGLeckMich.cpp
OpenGLeckMich/res/shaders/: Basic.Shader
OpenGLeckMich/src/: IndexBuffer.cpp  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBufferLayout.h  renderer.cpp  renderer.h
OpenGLeckMich/src/Test/: Test.h  TestClearColor.cpp  TestClearColor.h
